Fixed metadata service querying
