# image-metadata/cmd/docs/swagger.json
@@ -68,7 +68,7 @@
                     "200": {
                         "description": "Matching entry",
                         "schema": {
-                            "$ref": "#/definitions/types.Metadata"
+                            "$ref": "#/definitions/types.SwaggerMetadata"
                         }
                     },
                     "400": {
@@ -112,7 +112,7 @@
                     "201": {
                         "description": "Successfully created new entry",
                         "schema": {
-                            "$ref": "#/definitions/types.Metadata"
+                            "$ref": "#/definitions/types.SwaggerMetadata"
                         }
                     },
                     "400": {
@@ -200,7 +200,7 @@
                     "200": {
                         "description": "Matching entry",
                         "schema": {
-                            "$ref": "#/definitions/types.Metadata"
+                            "$ref": "#/definitions/types.SwaggerMetadata"
                         }
                     },
                     "400": {
@@ -271,14 +271,13 @@
                 }
             }
         },
-        "types.Metadata": {
+        "types.SwaggerMetadata": {
             "type": "object",
             "properties": {
                 "albumId": {
                     "type": "integer"
                 },
                 "imageId": {
-                    "description": "ImageRef uint\nImage    Image `gorm:\"foreignKey:ImageRef\"`",
                     "type": "integer"
                 },
                 "rating": {
